--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="O-Ranger Web Application"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/oranger-logo.png" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
